# filelib-python

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  exceptions.py  filepy  index.html  multifile.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: run_tests.yml
_docs/: mkdocs.yml
_docs/_docs_rendered/: 404.html  sitemap.xml
_docs/_docs_rendered/getting_started/installation/: index.html
_docs/_docs_rendered/home/: index.html
_docs/_docs_rendered/usage/client/: index.html
_docs/docs/: index.md
_docs/docs/getting_started/: authentication.md  index.md  storage_configuration.md
_docs/docs/usage/: client.md
_docs/site/: 404.html  index.html  sitemap.xml
_docs/site/blog/: index.html
_docs/site/getting_started/authentication/: index.html
_docs/site/getting_started/installation/: index.html
_docs/site/getting_started/storage_configuration/: index.html
_docs/site/home/: index.html
_docs/site/search/: search_index.json
_docs/site/usage/client/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: 404.html  CNAME  index.html  mkdocs.yml  sitemap.xml
docs/blog/: index.html
docs/docs/getting_started/: installation.md
docs/docs/usage/: client.md
docs/getting_started/: index.html
docs/getting_started/authentication/: index.html
docs/getting_started/installation/: index.html
docs/search/: search_index.json
docs/usage/client/: index.html
examples/: credentials  demo.py
examples/media/: README.md
filelib/: auth.py  client.py  errors.py  exceptions.py  upload.py  upload_manager.py  utils.py
getting_started/storage_configuration/: index.html
src/: cache_manager.py  upload_manager.py
src/filelib/: __init__.py  authentication.py  client.py  config.py  constants.py  exceptions.py  upload_manager.py  utils.py
src/filelib/cache/: __init__.py  file_cache_manager.py
src/filelib/cli/: entrypoint.py
src/filelib/parsers/: __init__.py  aws_error_parser.py  base.py  filelib_error_parser.py  upload_error_parser.py  xml.py
tests/: mocks.py  test_authentication_manager.py  test_filelib_client.py  test_filelib_config_object.py  test_helpers.py  test_upload_manager.py
usage/client/: index.html
